examples/napi/tests/build_error_tests/class_reference_field_alias.rs
use napi_derive::napi;

type Borrowed<'a> = &'a str;

#[napi]
pub struct AliasedReferenceField<'a> {
  pub value: Borrowed<'a>,
}

fn main() {}
